// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CellFixedWidth component matches the snapshot 1`] = `
<span
  className="sc-htpNat Adyvh sc-bdVaJa cypmDc"
>
  This is a cell with a fixed width
</span>
`;

exports[`the CellIcon component matches the snapshot 1`] = `
<span
  className="sc-ifAKCX bQLOYb sc-htpNat Adyvh sc-bdVaJa kvTJHa"
>
  Icon
</span>
`;

exports[`the CellMinWidth component matches the snapshot 1`] = `
<span
  className="sc-bxivhb lotSSC sc-bdVaJa dGqibM"
>
  This is a call with a min width
</span>
`;

exports[`the CellPrimary component matches the snapshot 1`] = `
<span
  className="sc-bwzfXH gExHBp sc-bdVaJa ktZzSQ"
>
  This is a primary cell
</span>
`;

exports[`the CellPrimary with responsiveHeaders matches the snapshot 1`] = `
<span
  className="sc-EHOje jXVInk sc-bwzfXH gExHBp sc-bdVaJa hWcPUc"
>
  This is a primary cell with responsive headers
</span>
`;
